--- a/css/index.css
+++ b/css/index.css
@@ -3,10 +3,11 @@
 body {
     max-width: 980px;
     margin: auto;
+    background-color: #f4f5f7
 }
 
 .background {
-    background-color: #f4f5f7;
+    background-color: #ffffff;
 }
 
 header .nav .logo {
@@ -45,6 +46,14 @@ header .nav .menu ul li a:hover {
         flex: 1;
     }
 
+    .info-about-projects .working-process {
+        margin-left: 5rem;
+    }
+
+    .info-about-me .stepan-petrykovych {
+        margin-left: 5rem;
+    }
+
 }
 
 h1 {
@@ -58,7 +67,6 @@ h1 {
     min-height: 400px;
     max-width: 800px;
     background-position: center;
-    margin-left: 5rem;
     background-size: cover;
     display: flex;
 }
@@ -77,7 +85,6 @@ h1 {
     min-height: 400px;
     max-width: 800px;
     background-position: center;
-    margin-left: 5rem;
     background-size: cover;
     display: flex;
 }
@@ -92,7 +99,7 @@ h1 {
     margin: 2rem 2rem;
 }
 
-.my-contacts p{
+.my-contacts p {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -109,4 +116,51 @@ a {
     font-size: 1rem;
     flex-direction: row;
     color: black;
+}
+
+.button {
+    display: inline-block;
+    padding: 0.35em 1.2em;
+    border: 0.1em solid #FFFFFF;
+    margin: 0 0.3em 0.3em 0;
+    border-radius: 0.12em;
+    box-sizing: border-box;
+    text-decoration: none;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    color: #000000;
+    text-align: center;
+    transition: all 0.2s;
+    background-color: #FFFFFF;
+    border: 1px solid black;
+}
+
+.button:hover {
+    color: #FFFFFF;
+    background-color: black;
+    cursor: pointer;
+    border: 1px solid black;
+}
+
+.send-message input {
+    width: 14rem;
+    display: flex;
+    border-radius: 4px;
+    padding: 4px;
+}
+
+.send-message {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 4rem;
+    background-color: black;
+    color: #FFFFFF;
 }
