--- a/css/index.css
+++ b/css/index.css
@@ -1,15 +1,179 @@
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans+HK|Ropa+Sans&display=swap');
 
 body {
-    background-color: #f4f5f7;
     max-width: 980px;
+    margin: auto;
+    background-color: #f4f5f7
 }
 
 .background {
     background-color: #ffffff;
 }
 
-img {
-    max-width: 300px;
-    max-height: 300px;
+header .nav .logo {
+    display: flex;
+    font-family: 'Ropa Sans', cursive;
+    font-size: 2rem;
+    text-align: center;
+    margin-left: 2rem;
+}
+
+header .nav .menu ul {
+    display: flex;
+    padding: 0;
+    list-style-type: none;
+    justify-content: space-around;
+}
+
+header .nav .menu ul li a {
+    text-decoration: none;
+    text-transform: uppercase;
+    padding: 5px;
+}
+
+header .nav .menu ul li a:hover {
+    border: 1px solid black;
+}
+
+@media (min-width: 450px) {
+    header .nav {
+        display: flex;
+        align-items: center;
+        flex: 1;
+    }
+
+    header .nav .menu {
+        flex: 1;
+    }
+
+    .info-about-projects .working-process {
+        margin-left: 5rem;
+    }
+
+    .info-about-me .stepan-petrykovych {
+        margin-left: 5rem;
+    }
+
+}
+
+h1 {
+    font-family: 'Ropa Sans', cursive;
+    font-size: 2rem;
+    text-align: center;
+}
+
+.info-about-me .stepan-petrykovych {
+    background-image: url(../img/stepan-petrykovych.jpg);
+    min-height: 400px;
+    max-width: 800px;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+}
+
+.info-about-me p {
+    display: flex;
+    align-items: center;
+    font-family: 'Noto Sans HK', cursive;
+    font-size: 1rem;
+    color: black;
+    margin: 2rem 2rem 2rem 2rem;
+}
+
+.info-about-projects .working-process {
+    background-image: url(../img/working.jpg);
+    min-height: 400px;
+    max-width: 800px;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+}
+
+.info-about-projects p {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Noto Sans HK', cursive;
+    font-size: 3rem;
+    color: black;
+    margin: 2rem 2rem;
+}
+
+.my-contacts p {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Noto Sans HK', cursive;
+    font-size: 1rem;
+    color: black;
+    margin: 2rem 2rem;
+}
+
+a {
+    display: flex;
+    justify-content: center;
+    font-family: 'Noto Sans HK', cursive;
+    font-size: 1rem;
+    flex-direction: row;
+    color: black;
+}
+
+.button {
+    display: inline-block;
+    padding: 0.35em 1.2em;
+    border: 0.1em solid #FFFFFF;
+    margin: 0 0.3em 0.3em 0;
+    border-radius: 0.12em;
+    box-sizing: border-box;
+    text-decoration: none;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    color: #000000;
+    text-align: center;
+    transition: all 0.2s;
+    background-color: #FFFFFF;
+    border: 1px solid black;
+}
+
+.button:hover {
+    color: #FFFFFF;
+    background-color: black;
+    cursor: pointer;
+    border: 1px solid black;
+}
+
+.send-message input{
+    width: 14rem;
+    display: flex;
+    border-radius: 4px;
+    padding: 4px;
+}
+
+.send-message {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    margin-top: 4rem;
+    background-color: black;
+    color: #FFFFFF;
+}
+
+article {
+    margin: 2rem;
+    justify-content: space-between;
+}
+
+.form-group {
+    margin: 2rem 2rem;
+}
+
+.btn {
+    margin-left: 2rem;
 }
