--- a/css/index.css
+++ b/css/index.css
@@ -170,6 +170,10 @@ article {
     justify-content: space-between;
 }
 
+article .card-title .card-text{
+    padding-top: 4rem;
+}
+
 .form-group {
     margin: 2rem 2rem;
 }
